--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build del proyecto
+name: Build del proyecto y Sonar
 
 on:
   push:
@@ -31,6 +31,7 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-20.04
+    needs: build 
     steps:
       - uses: actions/checkout@v3
         with:
