--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,13 +35,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 
-      - name: Debug Secrets
-        run: |
-          echo "SONAR_TOKEN: $SONAR_TOKEN"
-          env
+          
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_PROJECT_KEY: <your_project_key>
+          SONAR_ORGANIZATION: <your_organization_key>
           
       
