--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "deploy": "npx prisma generate ; npx prisma db push ; npm run build ; npm run start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -27,7 +28,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^4.33.0",
-    "@uploadthing/react": "^6.0.1",
+    "@uploadthing/react": "^6.2.2",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -48,7 +49,7 @@
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.0.3",
+    "uploadthing": "^6.3.3",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
