--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "discord-clone",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "clean": "rm -r .next; rm -r node_modules; rm -r package-lock.json",
     "lint": "next lint"
   },
   "dependencies": {
@@ -37,7 +38,7 @@
     "livekit-client": "^1.15.11",
     "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.292.0",
-    "next": "14.0.1",
+    "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
@@ -59,9 +60,9 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1",
-    "postcss": "^8",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.12",
+    "postcss": "^8.4.28",
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
