--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "livekit-client": "^1.15.11",
     "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.292.0",
-    "next": "^13.5.6",
+    "next": "14.0.1",
     "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
@@ -61,7 +61,7 @@
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8.4.28",
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0",
